[project]
name = "pco-recette-cesoir"
version = "0.1.0"
description = "Application UI for PCO project Sipmlon.co"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "gradio>=5.4.0",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.1",
    "pytest-xdist>=3.6.1",
]
